@@ -5,6 +5,7 @@
 2. When browsing Genres -> Jazz, allow user to list composers, artists, or
    albums.
 3. Add jumplist support to playlists listing.
+4. Context menu for dynamic playlists.
 
 0.5.3
 -----
